# for display continuity sake please use 2 spaces instead of tabs

2012-01-15 mmichaud <michael.michaud@free.fr>
    * Optimization of DeleteDuplicateItemsPlugIn + unit test
    * added a unit-test target in ant build file
      
2012-01-14 mmichaud <michael.michaud@free.fr>
    * Fix two small language issues in 
      ReplicateSelectedItemsPlugIn and CreateThiessenPolygonsPlugIn
      
2012-01-13 benjamin gudehus
    * added a unit test framework made of
      - org.openjump.test package
      - fixtures directory for datasets

2012-01-11 mmichaud <michael.michaud@free.fr>
    * Fixed bugs in
      - ClipToFencePlugIn [3472008] two identical attribute names not accepted.
        now throw a clearer message
      - CombineSelectedLayer now accept non-default geometry attribute names

2012-01-07 mmichaud <michael.michaud@free.fr>
    * Prepare 1.5 release (svn 2588)

2012-01-05 mmichaud <michael.michaud@free.fr>
    * Makes RemoveSelectedLayer more consistent and fix bug 3469215
      Now, a LayerEventType.REMOVED is listened by :
      - ViewAttributesPlugIn.ViewAttributesFrame which is also removed
      - InfoFrame which removes data from this layer from the model
      - LayerViewPanel which removes this layer renderer

2012-01-03 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
    * Add Clone Item PlugInto right click context mouse menu, add language strings to Clone Item PlugIn
    * Changed position within right click context menu to Copy This Coordinate PlugIn
    * Uncomment public boolean isRightMouseButtonUsed in ConstrainedMultiClickTool to let use right click context menu
      with Constrained Tools

2012-01-02 mmichaud <michael.michaud@free.fr>
  * AutoAssignAttributePlugIn : can copy from an attribute if attrite count > 1
    instead of 2 so that one can copy geometry attribute to a string attribute

2012-01-01 Matthias Scholz <ms@jammerhund.de>
  * first version of a new zoom/pan tool SuperZoomPanTool
  * actualy not for use and not activated yet
